# can_log_analyzer

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-and-test.yml
docs/: src_manual.md
src/can_log_analyzer/: run_web_app.py  web_app.py
tests/: test_my_package.py
