[project]
name = "can_log_analyzer"
version = "0.1.1"
description = "CAN log Analyzer"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <=3.13"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "CAN", "log", "analyzer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "cantools",
    "python-can",
    "pandas",
    "plotly",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/can_log_analyzer"
repository = "https://github.com/chaitu-ycr/can_log_analyzer"
documentation = "https://chaitu-ycr.github.io/can_log_analyzer/"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
